5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1723_2502.log
== TEST (2019-05-09 13:46:18) 
-- CODE:
from math import*
n=int(input("insira o numero de series: "))
c=1
snl=+1
s=sqrt(12)
p=0
i=1
i2=0
while c<n:
	p=snl*(1/(i*(3**i1)))+p
	c=c+1
	i=i+2
	i1=i1+1
	snl=snl*-1
f=s*p
print(round(f,8))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    p=snl*(1/(i*(3**i1)))+p
NameError: name 'i1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:46:41) 
-- CODE:
from math import*
n=int(input("insira o numero de series: "))
c=0
snl=+1
s=sqrt(12)
p=0
i=1
i2=0
while c<n:
	p=snl*(1/(i*(3**i1)))+p
	c=c+1
	i=i+2
	i1=i1+1
	snl=snl*-1
f=s*p
print(round(f,8))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    p=snl*(1/(i*(3**i1)))+p
NameError: name 'i1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:46:59) 
-- CODE:
from math import*
n=int(input("insira o numero de series: "))
c=0
snl=+1
s=sqrt(12)
p=0
i=1
i1=0
while c<n:
	p=snl*(1/(i*(3**i1)))+p
	c=c+1
	i=i+2
	i1=i1+1
	snl=snl*-1
f=s*p
print(round(f,8))


-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:47:05) 
-- CODE:
from math import*
n=int(input("insira o numero de series: "))
c=0
snl=+1
s=sqrt(12)
p=0
i=1
i1=0
while c<n:
	p=snl*(1/(i*(3**i1)))+p
	c=c+1
	i=i+2
	i1=i1+1
	snl=snl*-1
f=s*p
print(round(f,8))


-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 13:47:09) 
-- CODE:
from math import*
n=int(input("insira o numero de series: "))
c=0
snl=+1
s=sqrt(12)
p=0
i=1
i1=0
while c<n:
	p=snl*(1/(i*(3**i1)))+p
	c=c+1
	i=i+2
	i1=i1+1
	snl=snl*-1
f=s*p
print(round(f,8))


-- EXECUTION TIME:
0.181644
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
